<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Second Phase of App</string>

    <!-- Main Screen -->
    <string name="my_first_name">Shannon</string>
    <string name="my_last_name">Conneilly</string>

    <!-- Places -->
    <string name="current_loc_label">Current Location</string>
    <string name="my_town">Dracut, MA</string>
    <string name="want_to_be">Lakeville, MA</string>
    <string name="home_town">Pepperell, MA</string>
    <string name="birth_place">Peterborough, NH</string>
    <string name="boyfriend_town">Salem, NH</string>
    <string name="want_to_live">Seattle, WA</string>

    <!-- Page Names -->
    <string name="home_page">Home (Assignment 3)</string>
    <string name="weather_page">Weather</string>
    <string name="place_facts_page">Facts About Places</string>
    <string name="investment_page">Investment Portfolios</string>
    <string name="resume_page">Resume</string>
    <string name="bonus_page">Cat Facts</string>

    <!-- Investment Portfolio Labels -->
    <string name="my_investments_label">My Portfolio</string>
    <string name="parents_investments_label">Parents\' Portfolio</string>
    <string name="asset_label">Asset</string>
    <string name="money_amt_label">Monetary Value</string>
    <string name="proportion_label">Proportion</string>
    <string name="stocks_label">Stocks</string>
    <string name="bonds_label">Bonds</string>
    <string name="property_label">Property</string>
    <string name="cash_label">Cash</string>

    <!-- Lily Facts -->
    <string name="name_label">Name:</string>
    <string name="lily_name">Lily</string>
    <string name="sex_label">Sex:</string>
    <string name="sex">Female</string>
    <string name="age_label">Age:</string>
    <string name="age">11</string>
    <string name="breed_label">Breed:</string>
    <string name="breed">Balinese</string>
    <string name="lily_description">She is very sweet, docile, and likes to lick people. Some severe ear infections have rendered her hard of hearing, and she is a bit clumsy, but she loves to play nonetheless. Lily loves to cuddle and to lick plastic. She is pretty weird, but one of the nicest cats you will ever meet.</string>

    <!-- Other resource strings -->
    <string name="click_more">More…</string>

    <!-- Weather Condition Names, sourced from Udacity Sunshine Project -->
    <!-- Weather Conditions (From OpenWeatherMap) -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string>
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string>
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string>
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string>
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>

</resources>