<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/weather_menu_item"
        android:orderInCategory="1"
        android:title="@string/weather_page"
        app:showAsAction="never"/>
    <item
        android:id="@+id/places_facts_menu_item"
        android:orderInCategory="2"
        android:title="@string/place_facts_page"
        app:showAsAction="never"/>
    <item
        android:id="@+id/portfolio_menu_item"
        android:orderInCategory="3"
        android:title="@string/investment_page"
        app:showAsAction="never"/>
    <item
        android:id="@+id/resume_menu_item"
        android:orderInCategory="4"
        android:title="@string/resume_page"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bonus_facts_menu_item"
        android:orderInCategory="5"
        android:title="@string/bonus_page"
        app:showAsAction="never"/>
</menu>