<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationFactsActivity">

    <!-- Birthplace Elements -->

    <ImageView
        android:id="@+id/facts_birthplace_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/peterborough"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/facts_birthplace_scroll"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facts_birthplace_label" />

    <TextView
        android:id="@+id/facts_birthplace_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:padding="4dp"
        android:textAllCaps="true"
        android:letterSpacing=".25"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/birth_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/facts_birthplace_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/facts_birthplace_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/facts_birthplace_picture"
        app:layout_constraintTop_toBottomOf="@+id/facts_birthplace_label">

        <TextView
            android:id="@+id/facts_birthplace_summary"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Birthplace Placeholder" />
    </ScrollView>

    <TextView
        android:id="@+id/facts_birthplace_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/click_more"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Live Now Elements -->

    <ImageView
        android:id="@+id/facts_live_now_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dracut"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/facts_live_now_scroll"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facts_live_now_label" />

    <TextView
        android:id="@+id/facts_live_now_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:padding="4dp"
        android:textAllCaps="true"
        android:letterSpacing=".25"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/my_town"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <ScrollView
        android:id="@+id/facts_live_now_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/facts_live_now_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/facts_live_now_picture"
        app:layout_constraintTop_toBottomOf="@+id/facts_live_now_label" >

        <TextView
            android:id="@+id/facts_live_now_summary"
            android:text="Live Now Placeholder"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

    <TextView
        android:id="@+id/facts_live_now_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/click_more"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Like to Live Elements -->

    <ImageView
        android:id="@+id/facts_want_to_live_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/seattle"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/facts_want_to_live_scroll"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facts_want_to_live_label" />

    <TextView
        android:id="@+id/facts_want_to_live_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:padding="4dp"
        android:textAllCaps="true"
        android:letterSpacing=".25"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/want_to_live"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <ScrollView
        android:id="@+id/facts_want_to_live_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/facts_want_to_live_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/facts_want_to_live_picture"
        app:layout_constraintTop_toBottomOf="@+id/facts_want_to_live_label">

        <TextView
            android:id="@+id/facts_want_to_live_summary"
            android:text="Want to Live Placeholder"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

    <TextView
        android:id="@+id/facts_want_to_live_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/click_more"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Significant Other Elements -->

    <ImageView
        android:id="@+id/facts_bf_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:src="@drawable/salem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/facts_bf_scroll"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facts_bf_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/facts_bf_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:padding="4dp"
        android:textAllCaps="true"
        android:letterSpacing=".25"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/boyfriend_town"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <ScrollView
        android:id="@+id/facts_bf_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/facts_bf_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/facts_bf_picture"
        app:layout_constraintTop_toBottomOf="@+id/facts_bf_label">

        <TextView
            android:id="@+id/facts_bf_summary"
            android:text="S/O Placeholder"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

    <TextView
        android:id="@+id/facts_bf_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/click_more"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Guidelines -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75" />

</androidx.constraintlayout.widget.ConstraintLayout>